# BloomFilter

./: CMakeLists.txt
include/bloom/: bloomfilter.hpp  hasher.hpp
src/bloom/: bloomfilter.cpp  hasher.cpp
test/: bloomfilter.cpp
